<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Domo Scrum</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Bienvenido</string>
    <string name="titulo">Bienvenido</string>
    <string name="insertar">Insertar Registro</string>
    <string name="buscar">Buscar Registro</string>
    <string name="listado">Listado de Empleados</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="accept">Accept</string>
    <string name="title_activity_menu">Menu</string>
    <string name="menu">Menu</string>
    <string name="items">Poductos</string>
    <string name="buy">Comprar</string>
    <string name="stock">Saldos</string>
    <string name="viewlist">Ver Carro de compras</string>
    <string name="price">Configurar Precios</string>
    <string name="exit">Salir</string>
    <string name="title_activity_saldos">Saldos</string>
    <string name="title_activity_splash">Domo Scrum</string>
    <string name="title_activity_comprar">Comprar</string>
    <string name="title_activity_mobile_list">MobileList</string>
    <string name="configure">Configure</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="lifht1">Light 1</string>


</resources>