<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >
    
    
    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/titulo"
            android:textColor="@color/azul"
            android:textSize="35sp" />

         <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/edittext_rounded_corners"
            android:hint="@string/login"
            android:singleLine="true" />
        
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_rounded_corners"
            android:hint="@string/password"
            android:singleLine="true" />

        <Button
            android:id="@+id/acceder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/boton"
            android:onClick="acceder"
            android:padding="5dp"
            android:text="@string/accept"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/configure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/boton"
            android:onClick="configure"
            android:padding="5dp"
            android:text="@string/configure"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>
