<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.jack.domoscrum.MainActivity">

<LinearLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/app_name"
        android:textColor="@color/azul"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="3dp"
        android:paddingTop="10dp"
        android:textColor="@color/azul"
        android:textSize="13sp" />



    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingBottom="15dp"
        android:paddingTop="3dp"
        android:textColor="@color/rojo"
        android:textSize="13sp" />

    <ImageButton
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="3dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/lifht1"
        android:onClick="update"
        android:background="@drawable/update"/>

    <ImageButton
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:onClick="turnOnOff"
        android:background="@drawable/luz_on"/>


    <ImageButton
        android:id="@+id/temperature"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:paddingTop="3dp"
        android:paddingBottom="5dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:onClick="knowTemp"
        android:tag="@string/accept"
        android:background="@drawable/temperature"/>

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:paddingTop="3dp"
        android:paddingBottom="5dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:onClick="salir"
        android:background="@drawable/exit"/>


</LinearLayout>

</RelativeLayout>